--- a/u_compass/pubspec.yaml
+++ b/u_compass/pubspec.yaml
@@ -19,6 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  googleapis: any
+  googleapis_auth: any
+  provider: ^4.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
