--- a/u_compass/pubspec.yaml
+++ b/u_compass/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   googleapis: any
   googleapis_auth: any
   provider: ^4.0.2
+  table_calendar: ^2.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
