--- a/u_compass/android/build.gradle
+++ b/u_compass/android/build.gradle
@@ -3,11 +3,17 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.4'
     }
 }
 
@@ -15,6 +21,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.mapwize.io"}
+        maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
 
