--- a/u_compass/pubspec.yaml
+++ b/u_compass/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   googleapis_auth: any
   provider: ^4.0.2
   table_calendar: ^2.2.2
+  flutter_datetime_picker: ^1.3.4
+  flutter_mapbox_navigation: ^0.0.8
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
