--- a/u_compass/android/build.gradle
+++ b/u_compass/android/build.gradle
@@ -20,6 +20,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenLocal()
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "https://maven.mapwize.io"}
