--- a/u_compass/android/app/build.gradle
+++ b/u_compass/android/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation 'com.github.Mapwize:mapwize-ui-android:2.1.5'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.5.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
