--- a/u_compass/pubspec.yaml
+++ b/u_compass/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   table_calendar: ^2.2.2
   flutter_datetime_picker: ^1.3.4
   flutter_mapbox_navigation: ^0.0.8
+  flappy_search_bar: 1.4.1
 
 
   # The following adds the Cupertino Icons font to your application.
