--- a/u_compass/pubspec.yaml
+++ b/u_compass/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_datetime_picker: ^1.3.4
   flutter_mapbox_navigation: ^0.0.8
   flappy_search_bar: 1.4.1
+  http: ^0.12.0+4
 
 
   # The following adds the Cupertino Icons font to your application.
