--- a/u_compass/pubspec.yaml
+++ b/u_compass/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_mapbox_navigation: ^0.0.8
   flappy_search_bar: 1.4.1
   http: ^0.12.0+4
+  flutter_staggered_grid_view: ^0.2.5
 
 
   # The following adds the Cupertino Icons font to your application.
