--- a/u_compass/pubspec.yaml
+++ b/u_compass/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   http: ^0.12.0+4
   flutter_staggered_grid_view: ^0.3.0
   datetime_picker_formfield: ^1.0.0
-
+  flutter_google_places: ^0.2.4
+  geocoder: ^0.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
