--- a/u_compass/pubspec.yaml
+++ b/u_compass/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   datetime_picker_formfield: ^1.0.0
   flutter_google_places: ^0.2.4
   geocoder: ^0.2.1
+  location: ^2.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
